<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:fillViewport="true"
    android:fitsSystemWindows="false"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/speciesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <android.support.constraint.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />

            <TextView
                android:id="@+id/speciesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/species_label"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/speciesTitle"
                app:srcCompat="@drawable/ic_action_edit" />

            <TextView
                android:id="@+id/speciesIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/species_intro"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@+id/speciesTitle"
                app:layout_constraintTop_toBottomOf="@+id/speciesTitle" />

            <TextView
                android:id="@+id/speciesNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:gravity="end"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/speciesIntro" />

            <TextView
                android:id="@+id/speciesName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="end"
                android:text="@string/species_label_name"
                app:layout_constraintBottom_toBottomOf="@+id/speciesNameValue"
                app:layout_constraintRight_toLeftOf="@+id/guideline4" />

            <TextView
                android:id="@+id/speciesDaysValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/speciesNameValue" />

            <TextView
                android:id="@+id/speciesDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:gravity="right|end"
                android:text="@string/species_label_days"
                app:layout_constraintBottom_toBottomOf="@+id/speciesDaysValue"
                app:layout_constraintRight_toLeftOf="@+id/guideline4" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/countContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <android.support.constraint.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />

            <TextView
                android:id="@+id/countTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/egg_count_label"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/countTitle"
                app:srcCompat="@drawable/ic_action_edit" />

            <TextView
                android:id="@+id/countIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/egg_count_intro"
                android:visibility="gone"
                app:layout_constraintLeft_toLeftOf="@+id/countTitle"
                app:layout_constraintTop_toBottomOf="@+id/countTitle" />

            <TextView
                android:id="@+id/countNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/egg_count_label_number"
                app:layout_constraintBottom_toBottomOf="@+id/countValue"
                app:layout_constraintRight_toLeftOf="@+id/guideline5" />

            <TextView
                android:id="@+id/countValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="0"
                android:textSize="24sp"
                app:layout_constraintLeft_toRightOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/countIntro" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/nameContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            tools:visibility="visible">

            <TextView
                android:id="@+id/nameTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/hatch_name_label"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hatch_name_intro"
                app:layout_constraintLeft_toLeftOf="@+id/nameTitle"
                app:layout_constraintTop_toBottomOf="@+id/nameTitle"
                tools:visibility="gone" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nameTitle"
                app:srcCompat="@drawable/ic_action_edit" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="16"
                android:hint="@string/hint_hatch_name"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/statusContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <android.support.constraint.Guideline
                android:id="@+id/guideline8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />

            <TextView
                android:id="@+id/statusTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/status_label"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statusIntro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/status_intro"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="@+id/statusTitle"
                app:layout_constraintTop_toBottomOf="@+id/statusTitle" />

            <Button
                android:id="@+id/startHatchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:enabled="true"
                android:text="@string/start_hatch_button_label"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/statusIntro" />

        </android.support.constraint.ConstraintLayout>


        <android.support.constraint.ConstraintLayout
            android:id="@+id/notificationContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground">

            <android.support.constraint.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".3" />

            <TextView
                android:id="@+id/remindersTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/reminders_title"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/notificationsCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/turn_reminders_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/remindersTitle" />


        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/peepButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Peeps" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>

